# pretix-seating

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
quse_seatingplan/: apps.py  checkout.py  forms.py  patches.py  signals.py  urls.py  utils.py  views.py
quse_seatingplan/locale/de_Informal/LC_MESSAGES/: django.po
quse_seatingplan/static/quse_seatingplan/: checkout.css  seatingframe.css  seatingframe.js
quse_seatingplan/templates/pretixplugins/quse_seatingplan/: checkout_seating.html  seatingframe.html
quse_seatingplan/templates/quse_seatingplan/: settings.html
tests/: test_main.py
