[project]
name = "quse_seatingplan"
dynamic = ["version"]
description = "Seating plan plugin"
readme = "README.rst"
license = {text = "GNU Affero General Public License v3.0"}
keywords = ["pretix"]
authors = [
    {name = "QUSE", email = "hello@quse.link"},
]
maintainers = [
    {name = "QUSE", email = "hello@quse.link"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
quse_seatingplan = "quse_seatingplan:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "GitHub repository URL"
repository = "GitHub repository URL"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
quse_seatingplan = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]

[tool.setuptools.dynamic]
version = {attr = "quse_seatingplan.__version__"}

[tool.setuptools.packages.find]
include = [
    "quse_seatingplan",
    "quse_seatingplan.*",
]
namespaces = false
